--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "emailml is a new markup language making it easier than never before to write widely supported email templates",
   "main": "index.js",
   "scripts": {
+    "start:server": "ts-node server/index.ts",
+    "build": "tsc",
     "build:parser": "pegjs arithmetics.pegjs",
     "test": "jest"
   },
@@ -17,16 +19,22 @@
   "author": "Philipp Rost",
   "license": "MIT",
   "dependencies": {
+    "@types/body-parser": "^1.19.3",
+    "@types/express": "^4.17.19",
     "@types/node": "^20.8.6",
+    "body-parser": "^1.20.2",
     "commander": "^11.1.0",
+    "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "jest": "^29.7.0",
     "pegjs": "^0.10.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.5",
+    "lite-server": "^2.6.1",
     "ts-jest": "^29.1.1"
   }
 }
